# TerraPIN

./: CHANGELOG.md  CITATION.cff  README.md  README.txt  pyproject.toml  setup.py  terrapin.py
.github/workflows/: publish.yml  tests.yml
benchmarks/: pile_solvers.py
docs/: architecture.md
examples/: low_unit_terraces.py  quickstart.py  random_walk_terraces.py  symmetric_valley_terraces.py  terrace_tracking.py  vertical_only_terraces.py
examples/standard/: standard_terraces.py  talus_slope_retreat.py
examples/symmetric/: quickstart.py  random_walk_terraces.py  symmetric_valley_terraces.py  terrace_tracking.py
terrapin/: __init__.py  _version.py  geometry.py  model.py  plotting.py  standard.py  terrapin.py
tests/: conftest.py  randWalk.py  test.py  test_geometry.py  test_interactive.py  test_model.py  test_standard.py
